Fix slideshow stretching Fixes lathropd/reflowjs#6
Had to refactor a little because the negative margins on the image
container were messing with `max-width`

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -157,21 +157,22 @@ div.noMargin {
 }
 
 div.bss-slides {
-	margin-left: -20px;
-	margin-right: -20px;
-	margin-bottom: -20px;
-	margin-top: -20px;
-	
+  margin: 0 -20px 0 0;
+  padding: 0;
+}
+
+.bss-prev {
+  margin-left: -20px;
 }
 
 div.bss-slides figure {
-    margin: auto;
+    max-width: 100%;
     height: auto;
+    text-align: center;
 }
 
 
 .bss-slides figure img{
-    width: 100%;
     max-height: 400px;
 }
 
@@ -235,7 +236,7 @@ div#mugshotPhoto div {
 }
 
 .box img {
-    width: 100%;
+    max-width: 100%;
 }
 
 .box.w2col {
